--- a/style.css
+++ b/style.css
@@ -1142,3 +1142,38 @@ textarea {
 .final__files {
     margin-top: 32px;
 }
+
+.loginpage__wrapper {
+	background-color: #E0C794;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.form__container {
+	background-color: #ffffff;
+	padding: 64px;
+	border-radius: 12px;
+	box-shadow: 0px 10px 30px 0px #3333331A;
+	
+}
+
+#wp-submit {
+	padding: 1rem 2rem;
+	background-color: #111;
+	color: #fff;
+	border-radius: 0;
+	cursor: pointer;
+}
+
+.login-username {
+	display: flex;
+	flex-direction: column;
+}
+
+.login-password {
+	display: flex;
+	flex-direction: column;
+}
