--- a/style.css
+++ b/style.css
@@ -1137,6 +1137,7 @@ textarea {
 .final__header {
     max-width: 630px;
     margin-top: 32px;
+	
 }
 
 .final__files {
@@ -1153,9 +1154,8 @@ textarea {
 }
 
 .form__container {
-	background-color: #ffffff;
+	background-color: #262626;
 	padding: 64px;
-	border-radius: 12px;
 	box-shadow: 0px 10px 30px 0px #3333331A;
 	
 }
@@ -1168,15 +1168,15 @@ textarea {
 	cursor: pointer;
 }
 
-.login-username {
+.login-username, .login-password {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	gap: 64px;
+	margin-bottom: 8px;
 }
 
-.login-password {
-	display: flex;
-	flex-direction: column;
-}
 
 .site-branding {
 	display: flex;
@@ -1190,4 +1190,36 @@ textarea {
 .nav-menu {
 	gap: 16px;
     place-content: flex-end;
+}
+
+.login__header {
+	color: #E0C794;
+	text-align: center;
+	font-weight: 800;
+	margin-bottom: 40px;
+}
+
+p.login-username, p.login-password{
+	color: #E0C794;
+	font-weight: 800;
+	font-size: 24px;
+}
+
+p.login-remember {
+	color: white;
+}
+
+input#user_login.input, input#user_pass.input  {
+	border-radius: 0px;
+	width: 300px;
+}
+
+input#wp-submit.button.button-primary {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 800;
+	font-size: 24px;
+	color: white;
+	width: 100%;
+	border: none;
+	height: 75px;
 }
