--- a/style.css
+++ b/style.css
@@ -1166,6 +1166,10 @@ a {
 	margin-top: 56px;
 }
 
+.file__description:hover {
+	color: white;
+}
+
 .file__container {
     display: flex;
     flex-direction: column;
