--- a/style.css
+++ b/style.css
@@ -1224,12 +1224,14 @@ a {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	
 }
 
 .form__container {
 	background-color: #262626;
 	padding: 64px;
 	box-shadow: 0px 10px 30px 0px #3333331A;
+	position: relative;
 	
 }
 
@@ -1295,6 +1297,10 @@ input#wp-submit.button.button-primary {
 	width: 100%;
 	border: none;
 	height: 75px;
+	position: absolute;
+    top: 390px;
+    left: 0;
+	background-color: #262626;
 }
 
 .projectspage__wrapper {
