--- a/style.css
+++ b/style.css
@@ -1368,3 +1368,8 @@ p.file__description.disabled {
 	margin-top: 48px;
 	gap: 32px;
 }
+
+.documentos__section {
+	margin-top: 56px;
+	gap: 8px;
+}
