--- a/style.css
+++ b/style.css
@@ -1390,6 +1390,11 @@ p.file__description.disabled {
 	margin-top: 56px;
 }
 
+.section__field {
+	gap: 4px;
+	align-items: center;
+}
+
 .section__title {
 	font-weight: 800;
 	font-size: 26px;
@@ -1400,10 +1405,15 @@ p.file__description.disabled {
 	margin-bottom: 8px;
 }
 
+
 .field__label {
 	font-weight: 800;
 	font-size: 16px;
 	line-height: 130.9%;
 	letter-spacing: -0.025em;
 	color: #262626;
+}
+
+.field__text {
+	margin: 0;
 }
