disabled class for sidebar item

--- a/style.css
+++ b/style.css
@@ -1037,7 +1037,7 @@ a {
 	font-size: 25px;
 	line-height: 130.9%;
     transition: all .1s ease;
-    position: relative;
+    
     
 }
 
@@ -1045,12 +1045,6 @@ a {
     font-weight: 800;
 	color: white;
 }
-
-.list__item li:hover::after {
-    transform: scaleX(1);
-    transform-origin: left;
-}
-
 
 
 .page__content {
@@ -1419,4 +1413,14 @@ p.file__description.disabled {
 
 .field__text {
 	margin: 0;
+}
+
+li.list__item.disabled {
+	color: #4D4D4D;
+    font-weight: 800;
+	font-size: 25px;
+	line-height: 130.9%;
+    transition: all .1s ease;
+	cursor: default;
+	opacity: 0.9;
 }
