--- a/style.css
+++ b/style.css
@@ -997,6 +997,33 @@ a {
     flex-direction: row;
 } 
 
+.client__nav {
+	justify-content: space-between;
+	align-items: center;
+	height: 135px;
+	padding: 48px 64px;
+}
+
+.logout__btn {
+	border: none;
+	padding: 1rem 2rem;
+	background-color: #262626;
+	color: #fff;
+	border-radius: 0;
+	cursor: pointer;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 800;
+
+}
+
+.navbar__webmenu {
+	display: none;
+}
+
+.logout__btn:hover {
+	background-color: #DFC693;
+}
+
 .page__sidebar {
     background-color: #262626;
 	padding: 32px;
@@ -1436,3 +1463,9 @@ li.list__item.disabled {
 	cursor: default;
 	opacity: 0.9;
 }
+
+/* Media Queries */
+
+@media only screen and (max-width: 600px) {
+	
+  }
