--- a/style.css
+++ b/style.css
@@ -970,6 +970,11 @@ textarea {
 
 /* User profile page css */
 
+header#masthead.site-header {
+	background-color: white;
+	display: none;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -985,6 +990,7 @@ a {
 	padding: 64px;
     background-color: #DFC693;
 	min-height: 100vh;
+	margin-top: 135px;
 }
 
 .flex-col {
@@ -1002,6 +1008,10 @@ a {
 	align-items: center;
 	height: 135px;
 	padding: 48px 64px;
+	background-color: #fff;
+	position: fixed;
+    width: 100%;
+	top: 20px;
 }
 
 .logout__btn {
@@ -1018,6 +1028,7 @@ a {
 
 .navbar__webmenu {
 	display: none;
+	cursor: pointer;
 }
 
 .logout__btn:hover {
@@ -1464,29 +1475,50 @@ li.list__item.disabled {
 	opacity: 0.9;
 }
 
+
+
 /* Media Queries */
 
 @media only screen and (max-width: 1200px) {
 	
   }
+
 @media only screen and (max-width: 992px) {
 	
   }
+
 @media only screen and (max-width: 768px) {
+	.page__wrapper {
+		padding: 0;
+		display: block;
+		overflow: hidden;
+	}
+	.client__navbar {
+		
+	}
 	.logout__btn {
 		display: none;
 	}
 	.page__sidebar {
-		display: none;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		transform: translateY(-150%);
+		transition: transform 0.5s  ease-in;
+		
 	}
 	.navbar__webmenu {
 		display: block;
 	}
   }
+
 @media only screen and (max-width: 576px) {
 	
   }
 
+  .nav__active {
+	transform: translateY(0%);
+}
 
 
   /* 
@@ -1495,5 +1527,4 @@ li.list__item.disabled {
   sm: 768px,
   md: 992px,
   lg: 1200px,
-
 */
