--- a/style.css
+++ b/style.css
@@ -1509,9 +1509,13 @@ li.list__item.disabled {
 		margin-top: 4px;
 
 	}
+	.data__grid {
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
 
 @media only screen and (max-width: 992px) {
+	
 	
 }
 
