--- a/style.css
+++ b/style.css
@@ -1511,11 +1511,17 @@ li.list__item.disabled {
 	}
 	.data__grid {
 		grid-template-columns: repeat(1, 1fr);
+		justify-items: center;
+		gap: 32px;
+		margin-top: 16px;
+	}
+	.data__section {
+		max-width: 270px;
 	}
 }
 
 @media only screen and (max-width: 992px) {
-	
+
 	
 }
 
@@ -1580,6 +1586,7 @@ li.list__item.disabled {
 	}
 	.show {
 		margin-top: 32px;
+		margin-bottom: 32px;
 	}
 }
 
