--- a/style.css
+++ b/style.css
@@ -1218,9 +1218,10 @@ a {
 
 .form__container {
   background-color: #262626;
-  padding: 64px;
+  padding: 32px;
   box-shadow: 0px 10px 30px 0px #3333331a;
   position: relative;
+  transform: translateY(calc(50% - 60%));
 }
 
 #wp-submit {
@@ -1237,7 +1238,7 @@ a {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  gap: 64px;
+  gap: 32px;
   margin-bottom: 8px;
 }
 
