--- a/style.css
+++ b/style.css
@@ -1461,6 +1461,14 @@ li.list__item.disabled {
   color: white !important;
 }
 
+.sair__btn {
+  display: none;
+  color: #262626;
+  font-weight: 800;
+  line-height: 130.9%;
+  transition: all 0.1s ease;
+}
+
 /* Media Queries */
 
 @media only screen and (max-width: 1200px) {
@@ -1566,6 +1574,9 @@ li.list__item.disabled {
   .show {
     margin-top: 32px;
     margin-bottom: 32px;
+  }
+  .sair__btn {
+    display: inline-block;
   }
 }
 
