--- a/style.css
+++ b/style.css
@@ -1564,12 +1564,12 @@ li.list__item.disabled {
   }
   .container__header {
     font-size: 2.75rem;
-    text-align: center;
-    margin: 0 auto;
+    margin-left: 10%;
   }
   .file__description {
-    text-align: center;
-    margin: 0 auto;
+    margin-left: 10%;
+    max-width: 300px;
+    font-size: 0.9375rem;
   }
   .show {
     margin-top: 32px;
@@ -1598,6 +1598,19 @@ li.list__item.disabled {
 
   .placeholder__project {
     font-size: 0.9375rem;
+  }
+
+  .container__header {
+    font-size: 2rem;
+    margin-left: 20%;
+  }
+  .file__description {
+    margin-left: 20%;
+    max-width: 300px;
+    font-size: 0.9375rem;
+  }
+  .documentos__section {
+    gap: 16px;
   }
 }
 
