--- a/style.css
+++ b/style.css
@@ -1606,6 +1606,9 @@ a#mailto__dados:hover {
   .container__header {
     font-size: 2.75rem;
   }
+  .bottom__client {
+    flex-direction: column;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -1709,7 +1712,7 @@ a#mailto__dados:hover {
   }
 
   .file__description {
-    margin-left: 20%;
+    margin-left: 10%;
     max-width: 300px;
     font-size: 0.9375rem;
   }
@@ -1749,11 +1752,11 @@ a#mailto__dados:hover {
 
 .footer__logotext,
 .footer__link {
-  font-size: 17px;
-  line-height: 21px;
   font-weight: 400;
-  /* identical to box height */
+  font-size: 18px;
+  line-height: 130.9%;
   letter-spacing: -0.01em;
+
   margin: 0;
   padding: 0;
 }
@@ -1769,13 +1772,21 @@ a#mailto__dados:hover {
 }
 
 .contactos__wrapper {
-  gap: 29px;
+  gap: 24px;
 }
 
 .social__icon {
   width: 20px;
   height: 20px;
   max-width: 100%;
+}
+
+.site-info {
+  display: none;
+}
+
+.page {
+  margin: 0;
 }
 
 /* 
