--- a/style.css
+++ b/style.css
@@ -1553,6 +1553,69 @@ a#mailto__dados:hover {
   width: 50px;
 }
 
+.bottom__client {
+  background-color: #262626;
+  color: white;
+  min-height: 456px;
+  align-items: center;
+  gap: 157px;
+  padding-left: 5%;
+}
+
+.footer__section {
+  min-width: 252px;
+  min-height: 320px;
+}
+
+.footer__title {
+  margin-bottom: 58px;
+}
+
+.footer__logo {
+  max-width: 100%;
+  width: 94px;
+  margin-bottom: 29px;
+}
+
+.footer__logotext,
+.footer__link {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 130.9%;
+  letter-spacing: -0.01em;
+
+  margin: 0;
+  padding: 0;
+}
+
+.social__links {
+  align-items: baseline;
+  gap: 16px;
+}
+
+.footer__morada {
+  margin: 0;
+  padding: 0;
+}
+
+.contactos__wrapper {
+  gap: 24px;
+}
+
+.social__icon {
+  width: 20px;
+  height: 20px;
+  max-width: 100%;
+}
+
+.site-info {
+  display: none;
+}
+
+.page {
+  margin: 0;
+}
+
 /* Media Queries */
 
 @media only screen and (max-width: 1200px) {
@@ -1608,6 +1671,8 @@ a#mailto__dados:hover {
   }
   .bottom__client {
     flex-direction: column;
+    gap: 32px;
+    padding-top: 64px;
   }
 }
 
@@ -1724,69 +1789,6 @@ a#mailto__dados:hover {
 .nav__active {
   transform: translateY(0%);
   z-index: 10;
-}
-
-.bottom__client {
-  background-color: #262626;
-  color: white;
-  min-height: 456px;
-  align-items: center;
-  gap: 157px;
-  padding-left: 5%;
-}
-
-.footer__section {
-  min-width: 252px;
-  min-height: 320px;
-}
-
-.footer__title {
-  margin-bottom: 58px;
-}
-
-.footer__logo {
-  max-width: 100%;
-  width: 94px;
-  margin-bottom: 29px;
-}
-
-.footer__logotext,
-.footer__link {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 130.9%;
-  letter-spacing: -0.01em;
-
-  margin: 0;
-  padding: 0;
-}
-
-.social__links {
-  align-items: baseline;
-  gap: 16px;
-}
-
-.footer__morada {
-  margin: 0;
-  padding: 0;
-}
-
-.contactos__wrapper {
-  gap: 24px;
-}
-
-.social__icon {
-  width: 20px;
-  height: 20px;
-  max-width: 100%;
-}
-
-.site-info {
-  display: none;
-}
-
-.page {
-  margin: 0;
 }
 
 /* 
