--- a/style.css
+++ b/style.css
@@ -1792,6 +1792,8 @@ a#mailto__dados:hover {
 
   .login__header {
     font-size: 2.5rem;
+    margin-bottom: 24px;
+    margin-top: 16px;
   }
 }
 
