--- a/style.css
+++ b/style.css
@@ -1383,7 +1383,8 @@ input#wp-submit.button.button-primary:hover {
   background-color: #262626;
   color: #e0c794;
   min-width: 370px;
-  min-height: 450px;
+  min-height: 475px;
+  place-self: center;
 }
 
 .menu__header {
