--- a/style.css
+++ b/style.css
@@ -1642,6 +1642,11 @@ p.field__text.footer__dados {
   min-height: 230px;
 }
 
+.barras__grid {
+  align-items: center;
+  gap: 32px;
+}
+
 /* Media Queries */
 @media only screen and (max-width: 1370px) {
   .grid__bottom {
