--- a/style.css
+++ b/style.css
@@ -1652,15 +1652,20 @@ p.field__text.footer__dados {
   .grid__bottom {
     flex-direction: column;
     position: absolute;
-    top: 62%;
-    left: 10%;
+    top: 55%;
+    left: 15%;
     gap: 0;
   }
   .status__img {
-    transform: rotateZ(90deg);
-    transform-origin: left;
     max-width: 510px;
     max-height: 180px;
+  }
+
+  .barras__grid {
+    transform: rotateZ(90deg);
+    transform-origin: left;
+    margin-left: 6%;
+    gap: 55px;
   }
   .griditem__subtitle,
   .griditem__text {
