gap between bars on responsive 1

--- a/style.css
+++ b/style.css
@@ -1189,7 +1189,7 @@ a {
 }
 
 .bottom__item {
-  max-width: 215px;
+  max-width: 242px;
 }
 
 .grid__bottom {
@@ -1644,7 +1644,7 @@ p.field__text.footer__dados {
 
 .barras__grid {
   align-items: center;
-  gap: 32px;
+  gap: 59px;
 }
 
 /* Media Queries */
@@ -1665,7 +1665,7 @@ p.field__text.footer__dados {
     transform: rotateZ(90deg);
     transform-origin: left;
     margin-left: 6%;
-    gap: 55px;
+    gap: 0;
   }
   .griditem__subtitle,
   .griditem__text {
@@ -1673,6 +1673,9 @@ p.field__text.footer__dados {
   }
   .info__top {
     min-height: 32px;
+  }
+  .barra__item {
+    margin-right: 32px;
   }
 }
 
