--- a/style.css
+++ b/style.css
@@ -1823,6 +1823,26 @@ p.field__text.footer__dados {
   .barras__grid {
     margin-left: 16%;
   }
+
+  .section__title {
+    font-size: 1.5625rem;
+  }
+
+  .field__label,
+  .field__text {
+    font-size: 0.9375rem;
+  }
+
+  #upload_btn {
+    color: #262626;
+  }
+  #upload_btn:hover {
+    color: #4d4d4d;
+  }
+
+  .welcome__header.subheader {
+    font-size: 0.8125rem;
+  }
 }
 
 @media only screen and (max-width: 576px) {
