--- a/style.css
+++ b/style.css
@@ -1663,6 +1663,11 @@ p.field__text.footer__dados {
   background-color: #262626;
 }
 
+.btn__text--back {
+  color: white;
+  font-size: 38px;
+}
+
 /* Media Queries */
 @media only screen and (max-width: 1446px) {
   .grid__bottom {
